error send mail

--- a/src/pages/news/styles.module.scss
+++ b/src/pages/news/styles.module.scss
@@ -8,12 +8,12 @@
       color: var(--green);
     }
     time {
-      font-size: 0.75rem;
+      font-size: 0.875rem;
       color: var(--gray-800);
     }
     h2 {
       font-weight: 500;
-      padding-bottom: 1rem;
+      margin-bottom: 1rem;
       transition: color 0.2s ease 0s;
     }
     h2,
