--- a/src/components/Form/styles.module.scss
+++ b/src/components/Form/styles.module.scss
@@ -1,8 +1,9 @@
 .wrapper {
-  .label {
+  label {
+    display: block;
     font-size: 0.875rem;
     padding-bottom: 0.375rem;
-    span {
+    s {
       color: var(--red);
     }
   }
@@ -19,31 +20,41 @@
       border-color: var(--green);
     }
   }
+  .input,
+  div {
+    margin-bottom: 1rem;
+  }
+  .input,
   .textarea {
     width: 100%;
-    resize: none;
     outline: none;
     display: block;
-    min-height: 8rem;
     padding: 0.75rem;
+    border-radius: 0.75rem;
     background: var(--gray-900);
-    border: 0;
-
     transition: all 0.2s ease 0s;
+    border: 2px solid var(--gray-900);
+    &:hover,
+    &:focus {
+      border-color: var(--green);
+    }
+  }
+  .textarea {
+    border: 0;
+    resize: none;
+    outline: none;
+    border-radius: 0;
+    min-height: 8rem;
     &::-webkit-scrollbar {
-      width: 18px;
+      width: 4px;
     }
     &::-webkit-scrollbar-track {
       background: transparent;
     }
-
-    /* Handle */
     &::-webkit-scrollbar-thumb {
       background: #888;
       border-radius: 0.75rem;
     }
-
-    /* Handle on hover */
     &::-webkit-scrollbar-thumb:hover {
       background: #555;
     }
