--- a/src/components/ListServices/styles.module.scss
+++ b/src/components/ListServices/styles.module.scss
@@ -4,34 +4,30 @@
   text-align: center;
   grid-template-columns: repeat(3, 1fr);
   div {
+    gap: 1rem;
     display: flex;
-    flex-direction: column;
     align-items: center;
+    flex-direction: column;
   }
   span {
     display: flex;
     padding: 1.5rem;
     border-radius: 0.75rem;
     background: var(--white);
-    span {
-      border-radius: 0;
-    }
   }
   h3 {
-    margin-top: 1rem;
     font-weight: 500;
     font-size: 1.25rem;
+    & + ul {
+      margin-top: 1rem;
+    }
   }
-  h3 + ul {
-    margin-top: 3.5rem;
-  }
-  @media (max-width: 768px) {
-    grid-template-columns: 1fr;
+  @media (min-width: 768px) {
     h3 + ul {
-      margin-top: 2.5rem;
+      margin-top: 2rem;
     }
   }
 }
 .listServices {
-  margin-top: 4rem;
+  padding-top: 4rem;
 }
