--- a/src/components/Nav/styles.module.scss
+++ b/src/components/Nav/styles.module.scss
@@ -6,7 +6,7 @@
     li a {
       display: block;
       padding: 0.75rem;
-      transition: color 0.2s ease 0;
+      transition: color 0.2s ease 0s;
       &:hover,
       &.active {
         color: var(--green);
@@ -15,42 +15,43 @@
   }
 }
 .outsideClick {
-  position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
+  position: fixed;
 }
 .navMobile {
-  top: 5.75rem;
+  top: 6rem;
   opacity: 0;
+  z-index: 1;
   right: 1rem;
   min-width: 10rem;
   visibility: hidden;
   position: absolute;
-  z-index: 1;
   border-radius: 0.75rem;
   background: var(--white);
   transform: translateY(-8px);
   transition: all 0.2s ease 0s;
   &::after {
+    top: -7px;
     content: '';
-    position: absolute;
-    top: -8px;
+    z-index: -1;
     right: 19px;
-    width: 0px;
-    height: 0px;
-    border-style: solid;
-    border-width: 0px 8px 8px;
-    border-color: transparent transparent var(--white);
+    width: 1rem;
+    height: 1rem;
+    position: absolute;
+    border-radius: 0.25rem;
+    transform: rotate(45deg);
+    background: var(--white);
   }
   ul {
-    flex-direction: column;
     gap: 0;
+    flex-direction: column;
     li a {
       display: block;
       padding: 0.75rem;
-      transition: color 0.2s ease 0;
+      transition: color 0.2s ease 0s;
       &:hover,
       &.active {
         color: var(--green);
@@ -65,4 +66,54 @@
   opacity: 1;
   visibility: initial;
   transform: translateY(0);
+}
+.button {
+  height: 2rem;
+  width: 1.5rem;
+  margin-right: 1rem;
+  position: relative;
+  z-index: 100;
+  div {
+    width: 100%;
+    height: 3px;
+    position: relative;
+    border-radius: 4px;
+    background: var(--gray-500);
+    transition: all 0.2s ease 0s;
+  }
+  > div::after,
+  > div::before {
+    content: '';
+    left: 0;
+    width: inherit;
+    height: inherit;
+    position: absolute;
+    transition: inherit;
+    border-radius: inherit;
+    transform-origin: 50% 50%;
+    background: var(--gray-500);
+  }
+  > div::before {
+    top: -6px;
+  }
+  > div::after {
+    top: 6px;
+  }
+}
+.buttonActive {
+  > div {
+    background: transparent;
+  }
+  > div::before,
+  > div::after {
+    background: var(--green);
+  }
+  > div::before {
+    top: 0;
+    transform: rotate(45deg);
+  }
+  > div::after {
+    top: 0;
+    transform: rotate(-45deg);
+  }
 }
