--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,10 +1,8 @@
 * {
   margin: 0;
-
   padding: 0;
   box-sizing: border-box;
 }
-
 :root {
   --background: #f3f5f0;
   --white: #fefffa;
@@ -16,7 +14,6 @@
   --gray-800: #cbccc7;
   --gray-500: #7f807d;
 }
-
 @media (max-width: 1080px) {
   html {
     font-size: 93.75%;
@@ -27,7 +24,6 @@
     font-size: 87.5%;
   }
 }
-
 body,
 input,
 select,
@@ -35,48 +31,41 @@ textarea,
 button {
   font: 400 1rem 'Poppins', sans-serif;
 }
-
 body {
   color: var(--gray-500);
   background: var(--background);
 }
-
 button {
   cursor: pointer;
   border: 0;
   background: none;
 }
-
-a {
+a,
+s {
   color: inherit;
   text-decoration: none;
 }
-
 ol,
 ul {
   list-style: none;
 }
-
 svg,
 img {
   display: block;
 }
-
 .container {
   margin: 0 auto;
   max-width: 62rem;
   padding-left: 1rem;
   padding-right: 1rem;
 }
-
 .content {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 }
-
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   .content {
-    padding-top: 4rem;
-    padding-bottom: 4rem;
+    padding-top: 6rem;
+    padding-bottom: 6rem;
   }
 }
