--- a/src/styles/pages/home.module.scss
+++ b/src/styles/pages/home.module.scss
@@ -1,147 +1,145 @@
-.home {
-  .banner {
-    display: flex;
-    align-items: center;
-    background: #f8fbf1;
-    .content {
-      display: grid;
-      padding-top: 8rem;
-      padding-bottom: 8rem;
-      align-items: center;
-      grid-template-columns: 1fr 1fr;
-      .texts {
-        max-width: 29rem;
-        h1 {
-          font-weight: 600;
-          font-size: 2.5rem;
-        }
-        blockquote {
-          margin: 3rem 0 2rem;
-          font-style: italic;
-          font-size: 0.875rem;
-        }
-        a {
-          display: flex;
-          max-width: 14rem;
-          align-items: center;
-          color: var(--white);
-          padding: 0.75rem 1rem;
-          border-radius: 0.75rem;
-          background: var(--green);
-          justify-content: space-between;
-          transition: background 0.2s ease 0s;
-          &:hover {
-            background: var(--green-dark);
-          }
-        }
-      }
-      @media (max-width: 768px) {
-        gap: 1.5rem;
-        display: flex;
-        padding-top: 4rem;
-        padding-bottom: 4rem;
-        flex-direction: column;
-        .texts {
-          h1 {
-            text-align: center;
-          }
-        }
-      }
-    }
-  }
-  .services {
-    padding-top: 6rem;
-  }
-  .news {
-    padding-top: 4rem;
-    .posts {
-      div {
-        padding: 0.75rem;
-        border-radius: 0.75rem;
-        background: var(--white);
-        &:hover h2 {
-          color: var(--green);
-        }
-        time {
-          font-size: 0.75rem;
-          color: var(--gray-800);
-        }
-        h2 {
-          font-weight: 500;
-          margin-bottom: 1rem;
-          transition: color 0.2s ease 0s;
-        }
-        h2,
-        p {
-          overflow: hidden;
-          display: -webkit-box;
-          -webkit-line-clamp: 2;
-          text-overflow: ellipsis;
-          -webkit-box-orient: vertical;
-        }
-      }
-      a + a {
-        display: block;
-        margin-top: 1.5rem;
-        padding-top: 1.5rem;
-        border-top: 1px solid var(--gray-900);
-      }
-    }
-  }
-  .subtitle {
-    font-size: 2rem;
-    text-align: center;
-    &:after {
-      content: '';
-      height: 2px;
-      width: 2.5rem;
-      display: block;
-      background: var(--green);
-      margin: 0.25rem auto 2rem;
-    }
-  }
-  .about {
-    padding-top: 4rem;
-    p {
-      max-width: 50rem;
+.banner .content {
+  gap: 1.5rem;
+  display: flex;
+  padding-top: 4rem;
+  align-items: center;
+  padding-bottom: 4rem;
+  flex-direction: column;
+  .texts {
+    max-width: 30rem;
+    h1 {
+      font-size: 2.5rem;
       text-align: center;
-      margin: auto;
+    }
+    blockquote {
+      font-style: italic;
+      font-size: 0.875rem;
+      margin: 3rem 0 2rem;
+    }
+    a {
+      display: flex;
+      max-width: 14rem;
+      align-items: center;
+      color: var(--white);
+      padding: 0.75rem 1rem;
+      border-radius: 0.75rem;
+      background: var(--green);
+      justify-content: space-between;
+      transition: background 0.2s ease 0s;
+      &:hover {
+        background: var(--green-dark);
+      }
     }
   }
-  .agenda {
-    padding-top: 4rem;
-    padding-bottom: 6rem;
-    a {
-      gap: 1rem;
-      margin: auto;
-      display: flex;
-      width: fit-content;
-      align-items: center;
-      i {
-        display: block;
-        padding: 1.25rem;
-        border-radius: 0.75rem;
-        background: var(--white);
-      }
-      span {
-        transition: color 0.2s ease 0;
-        position: relative;
-        &::after {
-          left: 0;
-          width: 0;
-          height: 2px;
-          content: '';
-          display: block;
-          position: absolute;
-          background: var(--green);
-          transition: width 0.3s ease 0s;
-        }
-      }
-      &:hover span {
+  .heroImage {
+    display: none;
+  }
+  @media (min-width: 768px) {
+    display: grid;
+    padding-top: 8rem;
+    padding-bottom: 8rem;
+    grid-template-columns: 1fr 1fr;
+    .texts h1 {
+      text-align: initial;
+    }
+    .heroImage {
+      display: block;
+      margin-left: auto;
+    }
+  }
+}
+.news {
+  padding-top: 4rem;
+  .posts a {
+    div {
+      padding: 0.75rem;
+      border-radius: 0.75rem;
+      background: var(--white);
+      &:hover h2 {
         color: var(--green);
-        &::after {
-          width: 100%;
-        }
+      }
+      time {
+        font-size: 0.875rem;
+        color: var(--gray-800);
+      }
+      h2 {
+        font-weight: 500;
+        margin-bottom: 1rem;
+        transition: color 0.2s ease 0s;
+      }
+      h2,
+      p {
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        text-overflow: ellipsis;
+        -webkit-box-orient: vertical;
+      }
+    }
+    & + a {
+      display: block;
+      margin-top: 1.5rem;
+      padding-top: 1.5rem;
+      border-top: 1px solid var(--gray-900);
+    }
+  }
+}
+.subtitle {
+  font-size: 2rem;
+  text-align: center;
+  &:after {
+    content: '';
+    height: 2px;
+    width: 2.5rem;
+    display: block;
+    background: var(--green);
+    margin: 0.25rem auto 2rem;
+  }
+}
+.about {
+  padding-top: 4rem;
+  p {
+    max-width: 50rem;
+    text-align: center;
+    margin: auto;
+  }
+}
+.agenda {
+  padding-top: 4rem;
+  padding-bottom: 6rem;
+  a {
+    gap: 1rem;
+    margin: auto;
+    display: flex;
+    width: fit-content;
+    align-items: center;
+    i {
+      display: block;
+      padding: 1.25rem;
+      border-radius: 0.75rem;
+      background: var(--white);
+      & svg * {
+        fill: currentColor;
+      }
+    }
+    span {
+      position: relative;
+      transition: color 0.2s ease 0;
+      &::after {
+        left: 0;
+        width: 0;
+        height: 2px;
+        content: '';
+        display: block;
+        position: absolute;
+        background: var(--green);
+        transition: width 0.3s ease 0s;
+      }
+    }
+    &:hover span {
+      color: var(--green);
+      &::after {
+        width: 100%;
       }
     }
   }
